# Avatar-Vision

./: .gitignore  .metadata  LICENSE-MIT  README.md  diary_app_setting.json  foreman  foreman.264  output123.pcm  pubspec.yaml  recorded.pcm  temp.h264  temp.pcm  test.264  video_diary_setting.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/video_diary/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/domain/: app.dart  assets.dart  color_.dart  error.dart  event.dart  metadata.dart  result.dart  setting.dart  tab_item.dart  writing_state.dart
lib/pages/: play.dart  video.dart
lib/services/: database.dart  db.dart  event_bus.dart  native.dart  runtime_data.dart  setting.dart  video_process.dart  video_processor.dart
lib/tools/: compare.dart  custom_button_clipper.dart  custom_scroll_behavior.dart  time.dart
lib/widgets/: box_widget.dart  button.dart  context_menu.dart  dashbord.dart  dialog.dart  dropdown.dart  file_command.dart  glassy_box.dart  hover_button.dart  indicator.dart  key_listener.dart  media_conrtol_bar.dart  message.dart  metadata_widget.dart  past_entries.dart  play.dart  saving_indicator.dart  search.dart  setting_widget.dart  tab.dart  tabItem.dart  tab_item.dart  texture.dart  tip_content.dart  waveform.dart  window.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: addition.rs  audio.rs  camera.rs  camera_test.rs  capture.rs  channel.rs  channel_audio.rs  channel_camera.rs  channel_capture.rs  channel_encoding.rs  channel_recording.rs  channel_rendering.rs  channel_textrue.rs  channel_texture.rs  encoding.rs  event.rs  http_client.rs  lib.rs  log_.rs  recording.rs  resolution_settings.rs  slow.rs  textrue.rs
rust/src/domain/: audio.rs  camera.rs  channel.rs  image_processing.rs  mod.rs  recording.rs  resolution.rs  resolution_settings.rs  textrue.rs
rust/src/message_channel/: audio_message_channel.rs  camera_message_channel.rs  mod.rs  recording_message_channel.rs  rendering_message_channel.rs  texture_message_channel.rs
rust/src/tools/: mod.rs  ordqueue.rs  size.rs
test/: widget_test.dart
video_diary_database/: data.mdb  lock.mdb
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  win32_window.cpp
