[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
simple_logger = "4.0.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
irondash_message_channel = { version = "0.1.0", features = ["derive"] }
irondash_run_loop = { version = "0.1.0" }
irondash_engine_context = { version = "0.1.1" }
irondash_texture = { version = "0.1.0" }
fastrand = "1.8"
once_cell = "1.17.1"
image = { version = "0.24.5", features = ["png", "jpeg"] }
nokhwa-core = "0.1.0"
nokhwa = { version =  "0.10.3", features = ["input-native",  "output-threaded"] }
kanal = "0.1.0-pre8"
openh264 = "0.4.0"
anyhow = "1.0.40"
minimp4 = { git = "https://github.com/hanguk0726/minimp4.rs.git" }  # Conflict between 'clang-sys' version of 'nokhwa'
cpal = "0.15.0"
hound = "3.5.0"
# reqwest uses different options per platform

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "ios"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "native-tls",
] }

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "native-tls-vendored",
] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"
