[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
irondash_message_channel = { version = "0.1.0", features = ["derive"] }
irondash_run_loop = { version = "0.1.0" }
irondash_engine_context = { version = "0.1.1" }
irondash_texture = { version = "0.1.0" }
once_cell = "1.17.1"
image = { version = "0.24.5", features = ["png", "jpeg"] }
nokhwa-core = "0.1.0"
nokhwa = { version =  "0.10.3", features = ["input-native",  "output-threaded"] }
kanal = "0.1.0-pre8"
cpal = "0.15.2"
anyhow = "1.0.40"
hound = "3.5.0"
minimp4 = { git = "https://github.com/darkskygit/minimp4.rs" }   # it's supposed to be version 0.1.1, but it hasn't been published to crates.io yet.
num_cpus = "1.15.0"
log = "0.4"
simple_logger = "4.0.0"
fastrand = "1.8"
rayon = "1.5.1"
openh264 = "0.4.0"
